--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,9 +9,13 @@
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
+
+    img {
+      .borders();
+    }
+
   }
 
   .space-images {
@@ -57,14 +61,13 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-      }
+      .btn {}
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +75,6 @@
       }
     }
   }
-}// home
+}
+
+// home
