--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation code here
+nav {
+  background-color: @nav-bg;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  text-align: center;
+  padding-bottom: 1em;
+
+
+  h1 {
+    font-size: 5rem;
+    margin: .5em;
+  }
+
+  a {
+    font-size: 2em;
+    margin: 1em;
+    text-decoration: none;
+    color: @nav-font;
+  }
+}
