--- a/less/home-page.less
+++ b/less/home-page.less
@@ -61,7 +61,13 @@
         margin-bottom: 26px;
       }
 
-      .btn {}
+      .btn {
+        .button(@btn-bg-color, @border-real, 4rem);
+
+        &:hover {
+          .button(@border-real, @btn-bg-color, 4rem);
+        }
+      }
     }
 
     .walk-img {
