--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,7 @@ nav {
   flex-direction: column;
   text-align: center;
   padding-bottom: 1em;
+  justify-content: space-around;
 }
 nav h1 {
   font-size: 5rem;
@@ -174,7 +175,7 @@ nav h1 {
 }
 nav a {
   font-size: 2em;
-  margin: 1em;
+  margin: 0.75em;
   text-decoration: none;
   color: #454A59;
 }
@@ -196,6 +197,12 @@ footer {
 }
 .home .intro img {
   border-radius: 10px;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    border-radius: 0px;
+  }
 }
 .home .space-images {
   display: flex;
@@ -207,6 +214,15 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+  .home .space-images .blast {
+    width: 100%;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -224,6 +240,11 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
@@ -233,10 +254,19 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+  .home .walk .walk-text h3 {
+    margin-top: 3rem;
+  }
+}
 .home .walk .walk-text .btn {
   height: 4rem;
   background-color: #22283A;
   border-radius: 10px;
+  width: 100%;
   color: #dee2e6;
   font-size: 2rem;
   padding: 1rem;
@@ -247,6 +277,7 @@ footer {
   height: 4rem;
   background-color: #dee2e6;
   border-radius: 10px;
+  width: 100%;
   color: #22283A;
   font-size: 2rem;
   padding: 1rem;
@@ -256,6 +287,13 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+    order: -1;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
