--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,10 @@
 
     img {
       .borders();
+
+      @media @phone {
+        border-radius: 0px;
+      }
     }
 
   }
@@ -28,6 +32,18 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+    }
+
+    @media @phone {
+
+      .sky,
+      .launch {
+        display: none;
+      }
+
+      .blast {
+        width: 100%;
+      }
     }
   }
 
@@ -50,6 +66,10 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column;
+    }
+
     .walk-text {
       width: 50%;
 
@@ -59,6 +79,14 @@
 
       p {
         margin-bottom: 26px;
+      }
+
+      @media @phone {
+        width: 100%;
+
+        h3 {
+          margin-top: 3rem;
+        }
       }
 
       .btn {
@@ -73,6 +101,12 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin: 0;
+        order: -1;
+      }
 
       img {
         width: 100%;
