--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,7 @@ nav {
   flex-direction: column;
   text-align: center;
   padding-bottom: 1em;
+  justify-content: space-around;
 
 
   h1 {
@@ -15,7 +16,7 @@ nav {
 
   a {
     font-size: 2em;
-    margin: 1em;
+    margin: .75em;
     text-decoration: none;
     color: @nav-font;
   }
