--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,13 +5,20 @@
   width: 100%;
 }
 
+.padding() {
+  padding: 15px;
+}
+
 .button(@bgcolor, @fgcolor, @size) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: @size;
   background-color: @bgcolor;
   .borders();
   color: @fgcolor;
   font-size: 2rem;
-  padding: 1rem;
+  padding: @size - 2rem auto;
   text-align: center;
   width: @size * 2.75;
 }
