--- a/css/index.css
+++ b/css/index.css
@@ -243,6 +243,7 @@ footer {
 @media (max-width: 500px) {
   .home .walk {
     flex-direction: column;
+    padding: 50px 15px 20px 15px;
   }
 }
 .home .walk .walk-text {
@@ -263,26 +264,64 @@ footer {
   }
 }
 .home .walk .walk-text .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 4rem;
   background-color: #22283A;
   border-radius: 10px;
   width: 100%;
   color: #dee2e6;
   font-size: 2rem;
-  padding: 1rem;
+  padding: 2rem auto;
   text-align: center;
   width: 11rem;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 6rem;
+    background-color: #22283A;
+    border-radius: 10px;
+    color: #dee2e6;
+    font-size: 2rem;
+    padding: 4rem auto;
+    text-align: center;
+    width: 16.5rem;
+    width: 100%;
+  }
+}
 .home .walk .walk-text .btn:hover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 4rem;
   background-color: #dee2e6;
   border-radius: 10px;
   width: 100%;
   color: #22283A;
   font-size: 2rem;
-  padding: 1rem;
+  padding: 2rem auto;
   text-align: center;
   width: 11rem;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 6rem;
+    background-color: #dee2e6;
+    border-radius: 10px;
+    color: #22283A;
+    font-size: 2rem;
+    padding: 4rem auto;
+    text-align: center;
+    width: 16.5rem;
+    width: 100%;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
